--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,6 +6,6 @@ dependencies:
   - python=3.9.0
   - jupyterlab=3.5.1
   - pip:
-    - ray[air]=2.2.0
-    - xgboost-ray=0.1.13
-    - tensorboard=2.11.0
+    - ray[air]==2.2.0
+    - xgboost-ray==0.1.13
+    - tensorboard==2.11.0
